--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gerador_referencias",
   "version": "1.0.0",
   "description": "Gerador de referências segundo norma ABNT.",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,5 +22,6 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2"
-  }
+  },
+  "type": "module"
 }
